--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.16.3"
+    "async-mutex": "^0.5.0",
+    "discord.js": "^14.16.3",
+    "fs-extra": "^11.2.0"
   }
 }
